added result to expression