@@ -4,6 +4,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatCode;
 
 import java.util.Collections;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
@@ -13,30 +14,34 @@ import zhegalov.course.work.service.ExpressionServiceException;
 public class ExpressionFactoryTest {
     @Test
     void shouldCreateSumExpression() {
-        final var expression = ExpressionFactory.create(ExpressionOperation.SUM, Collections.emptyList());
+        final var expression = ExpressionFactory.create(ExpressionOperation.SUM, List.of(1, 2, 3));
         assertThat(expression).isNotNull();
         assertThat(expression.getOperation()).isEqualTo("+");
+        assertThat(expression.getResult()).isEqualTo(1 + 2 + 3);
     }
 
     @Test
     void shouldCreateSubExpression() {
-        final var expression = ExpressionFactory.create(ExpressionOperation.SUB, Collections.emptyList());
+        final var expression = ExpressionFactory.create(ExpressionOperation.SUB, List.of(10, 2, 3));
         assertThat(expression).isNotNull();
         assertThat(expression.getOperation()).isEqualTo("-");
+        assertThat(expression.getResult()).isEqualTo(10 - 2 - 3);
     }
 
     @Test
     void shouldCreateMulExpression() {
-        final var expression = ExpressionFactory.create(ExpressionOperation.MUL, Collections.emptyList());
+        final var expression = ExpressionFactory.create(ExpressionOperation.MUL, List.of(1,2,3));
         assertThat(expression).isNotNull();
         assertThat(expression.getOperation()).isEqualTo("*");
+        assertThat(expression.getResult()).isEqualTo(1*2*3);
     }
 
     @Test
     void shouldCreateDivExpression() {
-        final var expression = ExpressionFactory.create(ExpressionOperation.DIV, Collections.emptyList());
+        final var expression = ExpressionFactory.create(ExpressionOperation.DIV, List.of(12, 2, 3));
         assertThat(expression).isNotNull();
         assertThat(expression.getOperation()).isEqualTo("/");
+        assertThat(expression.getResult()).isEqualTo(12/2/3);
     }
 
     @Test
